--- a/desktop/apps/editorial_features/components/venice_2017/stylesheets/index.styl
+++ b/desktop/apps/editorial_features/components/venice_2017/stylesheets/index.styl
@@ -56,7 +56,6 @@ nav-height = 54px
   height 50px
   display flex
   background-color rgba(0,0,0,0.5)
-  transition all 0.25s ease
   cursor pointer
   svg
     width 8px
