--- a/desktop/apps/editorial_features/components/venice_2017/stylesheets/video.styl
+++ b/desktop/apps/editorial_features/components/venice_2017/stylesheets/video.styl
@@ -38,7 +38,6 @@
   border 1px solid white
   border-radius 2px
   background-color rgba(0,0,0,0.5)
-  z-index 5
   &__icon
     width 9px
     height 9px
@@ -75,6 +74,7 @@
   display flex
   align-items center
   height 3px
+  z-index 0
   .noUi-handle
     top -7px
 
